# proot

./: .gitignore  CMakeLists.txt
src/: .check_process_vm.d  .check_seccomp_filter.d  build.h  care  loader-m32.elf  loader.elf  proot
src/cli/: care.d  cli.d  note.d  proot.d
src/execve/: aoxp.d  auxv.d  elf.d  enter.d  exit.d  ldso.d  shebang.d
src/extension/: extension.d
src/extension/care/: archive.d  care.d  extract.d  final.d
src/extension/fake_id0/: fake_id0.d
src/extension/kompat/: kompat.d
src/extension/link2symlink/: link2symlink.d
src/extension/portmap/: map.d  portmap.d
src/loader/: loader  loader-m32  loader-m32.d  loader.d
src/path/: binding.d  canon.d  glue.d  path.d  proc.d  temp.d
src/ptrace/: ptrace.d  user.d  wait.d
src/syscall/: chain.d  enter.d  exit.d  heap.d  rlimit.d  seccomp.d  socket.d  syscall.d  sysnum.d
src/tracee/: event.d  mem.d  reg.d  tracee.d
